--- a/app/src/main/res/layout/loginscreen.xml
+++ b/app/src/main/res/layout/loginscreen.xml
@@ -8,4 +8,126 @@
     android:background="@color/white"
     tools:context=".MainActivity4">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="60dp"
+        android:text="Socially"
+        android:textSize="70dp"
+        android:id="@+id/logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="120dp"
+        android:textColor="#9F4441"
+        android:textStyle="bold"
+        />
+
+    <ImageView
+        android:id="@+id/backArrow"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:scaleX="-1"
+        android:src="@drawable/next"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="10dp"
+        app:tint="@color/black"
+        />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_below="@+id/logo"
+        android:hint="  Username"
+        android:textSize="20dp"
+        android:background="@drawable/rectangle"
+        android:backgroundTint="#F8F8F8"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:id="@+id/username"
+        />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_below="@+id/username"
+        android:hint="  Password"
+        android:textSize="20dp"
+        android:background="@drawable/rectangle"
+        android:backgroundTint="#F8F8F8"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"
+        android:id="@+id/password"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/password"
+        android:layout_alignEnd="@+id/password"
+        android:text="Forgot password?"
+        android:layout_marginTop="20dp"
+        android:textColor="#9A5A5B"
+        android:textSize="18dp"
+        android:id="@+id/forget"
+        />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_below="@+id/forget"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:backgroundTint="#D19F9E"
+        android:text="Log in"
+        android:textStyle="bold"
+        android:textSize="25dp"
+        android:textColor="@color/white"
+        android:id="@+id/loginbtn"
+        />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OR"
+        android:layout_below="@+id/loginbtn"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="40dp"
+        android:textSize="18dp"
+        android:id="@+id/or"
+        android:textColor="#a6a69c"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Don't have an account?  "
+        android:id="@+id/text1"
+        android:layout_below="@id/or"
+        android:layout_marginTop="40dp"
+        android:layout_centerInParent="true"
+        android:textColor="#a6a69c"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/text1"
+        android:layout_toEndOf="@+id/text1"
+        android:text="Sign up"
+        android:textColor="#9A5A5B"
+        android:textStyle="bold"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Socially"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="30dp"
+        android:textSize="18dp"
+        android:textColor="#D19F9E"
+        />
 </RelativeLayout>
