mainpage, chat screen

--- a/app/src/main/res/layout/loginscreen.xml
+++ b/app/src/main/res/layout/loginscreen.xml
@@ -38,6 +38,7 @@
         android:layout_below="@+id/logo"
         android:hint="  Username"
         android:textSize="20dp"
+        android:textColor="@color/black"
         android:background="@drawable/rectangle"
         android:backgroundTint="#F8F8F8"
         android:layout_marginStart="20dp"
@@ -52,6 +53,7 @@
         android:hint="  Password"
         android:textSize="20dp"
         android:background="@drawable/rectangle"
+        android:textColor="@color/black"
         android:backgroundTint="#F8F8F8"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
@@ -78,7 +80,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:backgroundTint="#D19F9E"
+        android:backgroundTint="#9A5A5B"
         android:text="Log in"
         android:textStyle="bold"
         android:textSize="25dp"
