--- a/app/src/main/res/layout/mainpage.xml
+++ b/app/src/main/res/layout/mainpage.xml
@@ -8,6 +8,23 @@
     android:background="@color/white"
     tools:context=".MainActivity5">
 
+
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/tab_bar"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/tabbar"
+        />
+
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+
+    </ScrollView>
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="415dp"
@@ -16,22 +33,16 @@
         android:id="@+id/image"
         />
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/tab_bar"
-        android:layout_alignParentBottom="true"
-        />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/like"
         android:layout_below="@+id/image"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginStart="10dp"
         android:id="@+id/like"
         />
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -39,7 +50,7 @@
         android:layout_toEndOf="@+id/like"
         android:background="@drawable/comment"
         android:layout_below="@+id/image"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginStart="10dp"
         android:id="@+id/comment"
         />
@@ -50,7 +61,7 @@
         android:layout_toEndOf="@+id/comment"
         android:background="@drawable/share"
         android:layout_below="@+id/image"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:id="@+id/share"
         android:layout_marginStart="10dp"
         android:textSize="28dp"
@@ -62,7 +73,7 @@
         android:background="@drawable/options"
         android:layout_below="@+id/image"
         android:layout_centerInParent="true"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="5dp"
         android:textSize="30dp"
         />
 
@@ -72,9 +83,251 @@
         android:background="@drawable/save"
         android:layout_below="@+id/image"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
         android:textSize="23dp"
         />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_below="@+id/like"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="12dp"
+        android:layout_alignStart="@+id/like"
+        android:src="@drawable/img"
+        android:id="@+id/likedby"
+        android:textColor="@color/black"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Liked by "
+        android:layout_toEndOf="@+id/likedby"
+        android:layout_below="@+id/comment"
+        android:layout_marginTop="14dp"
+        android:layout_marginStart="8dp"
+        android:id="@+id/textlikedby"
+        android:textSize="15dp"
+        android:textColor="@color/black"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="craig_love "
+        android:layout_toEndOf="@+id/textlikedby"
+        android:layout_below="@+id/comment"
+        android:layout_marginTop="14dp"
+        android:textStyle="bold"
+        android:id="@+id/person"
+        android:textSize="15dp"
+        android:textColor="@color/black"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="and"
+        android:layout_toEndOf="@+id/person"
+        android:layout_below="@id/comment"
+        android:layout_marginTop="14dp"
+        android:id="@+id/textand"
+        android:textSize="15dp"
+        android:textColor="@color/black"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="  44,686 others "
+        android:layout_toEndOf="@+id/textand"
+        android:layout_below="@+id/comment"
+        android:layout_marginTop="14dp"
+        android:textStyle="bold"
+        android:id="@+id/others"
+        android:textSize="15dp"
+        android:textColor="@color/black"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="joshua_I"
+        android:layout_below="@id/likedby"
+        android:layout_above="@id/tabbar"
+        android:textStyle="bold"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:id="@+id/joshua"
+        android:textSize="15dp"
+        android:textColor="@color/black"
+
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/likedby"
+        android:layout_toEndOf="@+id/joshua"
+        android:text="The game in Japan was amazing and I want to share some photos"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="5dp"
+        android:textColor="@color/black"
+        android:textSize="15dp"
+        android:layout_above="@id/tabbar"
+        />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_above="@+id/image"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="5dp"
+        android:src="@drawable/img_2"
+        android:id="@+id/postedby"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="joshua_I"
+        android:layout_toEndOf="@id/postedby"
+        android:layout_above="@id/image"
+        android:layout_marginBottom="25dp"
+        android:layout_marginStart="8dp"
+        android:textStyle="bold"
+        android:id="@+id/joshua2"
+        android:textSize="15dp"
+        android:textColor="@color/black"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tokyo, Japan"
+        android:layout_alignStart="@+id/joshua2"
+        android:layout_above="@id/image"
+        android:textColor="@color/black"
+        android:layout_marginBottom="5dp"
+        android:id="@+id/place"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/verfied_badge"
+        android:layout_toEndOf="@id/joshua2"
+        android:layout_above="@+id/place"
+        android:textColor="#935855"
+        />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/options"
+        android:layout_above="@+id/image"
+        android:layout_alignEnd="@+id/image"
+        android:textSize="30dp"
+        android:layout_marginBottom="10dp"
+        />
+
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_above="@+id/postedby"
+        android:layout_below="@+id/cam"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/img_3"
+        app:civ_border_width="3dp"
+        app:civ_border_color="#B71B54"
+        android:layout_marginStart="15dp"
+        android:id="@+id/acc1"
+        />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_above="@+id/postedby"
+        android:layout_below="@+id/cam"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/img_2"
+        app:civ_border_width="3dp"
+        app:civ_border_color="#B71B54"
+        android:layout_toEndOf="@+id/acc1"
+        android:layout_marginStart="17dp"
+        android:id="@+id/acc2"
+        />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_above="@+id/postedby"
+        android:layout_below="@+id/cam"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/img_4"
+        app:civ_border_width="3dp"
+        app:civ_border_color="#B71B54"
+        android:layout_marginStart="17dp"
+        android:layout_toEndOf="@+id/acc2"
+        android:id="@+id/acc3"
+        />
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_above="@+id/postedby"
+        android:layout_below="@+id/cam"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/img_5"
+        app:civ_border_width="3dp"
+        app:civ_border_color="#B71B54"
+        android:layout_marginStart="17dp"
+        android:layout_toEndOf="@+id/acc3"
+        android:id="@+id/acc4"
+        />
+
+
+    <TextView
+        android:layout_width="38dp"
+        android:layout_height="38dp"
+        android:background="@drawable/camera"
+        android:layout_marginTop="40dp"
+        android:id="@+id/cam"
+        android:layout_marginStart="8dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Socially"
+        android:layout_centerHorizontal="true"
+        android:textSize="20dp"
+        android:layout_marginTop="48dp"
+        android:textColor="#935855"
+        />
+
+
+    <TextView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/share"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="40dp"
+        android:id="@+id/topshare"
+        />
+
+
+    <TextView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/music"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="35dp"
+        />
+
 
 </RelativeLayout>
