--- a/app/src/main/res/drawable/tab_bar.xml
+++ b/app/src/main/res/drawable/tab_bar.xml
@@ -12,7 +12,8 @@
       android:fillAlpha="0.01"/>
   <path
       android:pathData="M337.5,35C343.85,35 349,29.85 349,23.5C349,17.15 343.85,12 337.5,12C331.15,12 326,17.15 326,23.5C326,29.85 331.15,35 337.5,35Z"
-      android:fillType="evenOdd"/>
+      android:fillType="evenOdd"
+      />
   <path
       android:pathData="M337.5,12.25C343.71,12.25 348.75,17.29 348.75,23.5C348.75,29.71 343.71,34.75 337.5,34.75C331.29,34.75 326.25,29.71 326.25,23.5C326.25,17.29 331.29,12.25 337.5,12.25Z"
       android:strokeAlpha="0.1"
